# PaperRAG

./: .gitignore  README.md  pyproject.toml
app/: __init__.py
app/api/: __init__.py  main.py
app/api/routes/: __init__.py  health.py  index.py  outline.py  parse.py  pipeline.py  review.py
app/cli/: __init__.py  main.py
app/core/: __init__.py  config.py  exceptions.py  logging.py  paths.py
app/domain/: __init__.py
app/domain/citation/: __init__.py  registry.py
app/domain/models/: __init__.py  chunk.py  paper_metadata.py  runtime.py
app/domain/outline/: __init__.py  models.py  planner.py
app/domain/retrieval/: __init__.py  models.py  service.py
app/domain/review/: __init__.py  chapter_ops.py  chapter_writer.py  engine.py  final_pass_writer.py  models.py  outline_loader.py  prompts.py  retrieval_builder.py
app/infrastructure/: __init__.py
app/schemas/: __init__.py  api_models.py
app/services/: __init__.py  index_service.py  outline_service.py  parser_service.py  pipeline_service.py  review_service.py
app/use_cases/: __init__.py  _shared.py  build_index.py  generate_outline.py  health_and_state.py  prepare_corpus.py  run_review_from_outline.py  run_review_from_topic.py
configs/: env-example.txt  settings.yaml
data/database/: metadata.json  paper_index.faiss
tests/: __init__.py  test_api_routes.py  test_config.py  test_dashscope_clients.py  test_outline_planner.py  test_prompt_contracts.py  test_retrieval_builder.py  test_retrieval_service.py  test_review_engine.py  test_run_dir_layout.py  test_sectionless_chapters.py  test_use_cases.py
(+220 files in other folders)
